<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">back ground</string>
    <string name="logo_image">logo image</string>
    <string name="go_all_in">go all in</string>
    <string name="on_going_all_out">on going all out</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">find a team in your city and dominate the league
    </string>
    <string name="get_started">get started</string>
    <string name="desired_league">desired league</string>
    <string name="mens">mens</string>
    <string name="womens">womens</string>
    <string name="co_ed">co-ed</string>
    <string name="next">next</string>
    <string name="skill_background">skill background</string>
    <string name="i_m_a">I\'m a :</string>
    <string name="beginner">beginner</string>
    <string name="baller">baller</string>
    <string name="finish">finish</string>
    <string name="back_ground_finish">background finish</string>
    <string name="search_league">search league</string>
    <string name="welcome_backgroung">welcome backgroung</string>
</resources>
