<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controller.WelcomeActivity">

    <ImageView
            android:src="@drawable/welcomescreenbg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/background_image"/>
    <ImageView
            android:src="@drawable/swooshlogo"
            android:layout_width="88dp"
            android:layout_height="29dp"
            android:id="@+id/imageView2"
            android:scaleType="fitCenter"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/logo_image" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
    <TextView
            android:text="@string/go_all_in"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textColor="#FFFCFC"
            app:fontFamily="@font/montserrat" android:textSize="46sp" android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
    <TextView
            android:text="@string/on_going_all_out"
            android:textAllCaps="true"
            android:textColor="#FFFCFC"
            android:textAlignment="center"
            android:layout_width="228dp"
            android:layout_height="32dp"
            android:id="@+id/textView2" app:fontFamily="@font/montserrat"
            android:textSize="22sp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:textStyle="bold" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/imageView" android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
    <TextView
            android:text="@string/find_a_team_in_your_city_and_dominate_the_league"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:layout_width="221dp"
            android:layout_height="46dp"
            android:id="@+id/textView3" android:textColor="#FCFCFC"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/imageView"
            android:layout_marginRight="8dp" app:fontFamily="@font/montserrat"/>
    <Button
            android:text="@string/get_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/getstartedbtn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:fontFamily="@font/montserrat"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView" android:textColor="#FAFAFA"
            android:background="@drawable/swoosh_button"/>

</android.support.constraint.ConstraintLayout>